Fix weird graphical glitch on mobile
The image, when white, had an unwanted black border between image and border.

--- a/src/styles.css
+++ b/src/styles.css
@@ -108,6 +108,13 @@ nav > ul {
   margin-bottom: 20px;
   cursor: pointer;
   border: 4px solid white;
+  background-color: white;
+  width: 150px;
+  height: 150px;
+}
+
+.profile-picture img {
+  background-color: #262626;
 }
 
 .profile-picture:hover img,
@@ -204,7 +211,6 @@ nav > ul {
   }
 
   .profile-picture {
-    margin-top: 4px;
     margin-right: 20px;
     margin-bottom: 0;
   }
